--- a/package.json
+++ b/package.json
@@ -9,8 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "d3": "^7.9.0",
+    "d3-geo": "^3.1.1",
+    "d3-geo-polygon": "^2.0.1",
+    "ijson": "^0.0.1",
+    "next": "15.1.3",
+    "osmtogeojson": "^2.2.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.3"
+    "topojson-client": "^3.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "22.10.3",
+    "@types/react": "19.0.2",
+    "typescript": "5.7.2"
   }
 }
